<resources>
    <string name="app_name">ServiceByPro</string>
    <string name="logo_name">ServicePro</string>
    <string name="google_maps_api_key"></string>
    <string name="pref_file">com.abc.preferences_file</string>
    <string name="pref_login_status">com.abc.preferences_login_status</string>
    <string name="pref_user_first_name">com.abc.preferences_user_first_name</string>
    <string name="pref_user_last_name">com.abc.preferences_user_last_name</string>
    <string name="pref_user_about">com.abc.preferences_user_about</string>
    <string name="pref_user_join_date">com.abc.preferences_join_date</string>
    <string name="pref_user_phone">com.abc.preferences_user_phone</string>
    <string name="pref_user_email">com.abc.preferences_user_email</string>
    <string name="pref_user_role">com.abc.preferences_user_role</string>
    <string name="pref_user_id">com.abc.preferences_user_id</string>
    <string name="pref_user_commune">com.abc.preferences_user_commune</string>
    <string name="pref_user_wilaya">com.abc.preferences_user_wilaya</string>
    <string name="pref_user_avatar">com.abc.preferences_user_avatar</string>
    <string name="pref_user_is_active">com.abc.pref_user_is_active</string>
    <string name="fragment_post_container">FragmentPostContainer</string>
    <string name="fragment_service">FragmentService</string>
    <string name="fragment_details">FragmentDetails</string>
    <string name="fragment_date">FragmentDate</string>
    <string name="fragment_location">FragmentLocation</string>
    <string name="fragment_type">FragmentType</string>
    <string name="fragment_payment">FragmentPayment</string>
    <string name="fragment_payment_fixed">FragmentPaymentFixed</string>
    <string name="fragment_payment_hourly">FragmentPaymentHourly</string>
    <string name="fragment_freelancer">FragmentFreelancer</string>
    <string name="fragment_profile">FragmentProfile</string>
    <string name="fragment_add">FragmentAdd</string>
    <string name="fragment_search">FragmentSearch</string>
    <string name="fragment_settings">FragmentSettings</string>
    <string name="fragment_assignment">FragmentAssignment</string>
    <string name="fragment_messages">FragmentMessages</string>
    <string name="client">client</string>
    <string name="artisan">artisan</string>
    <string name="first_slide_title">Want to complete your home tasks ?</string>
    <string name="second_slide_title">Compare Service Professionals</string>
    <string name="third_slide_title">Enjoy warranty on services</string>
    <string name="fourth_slide_title">Relax, and get your tasks done!</string>
    <string name="first_slide_desc">Choose from over 20 home services at best prices</string>
    <string name="second_slide_desc">and choose the most suitable one for you, and cennect via chat ot call</string>
    <string name="third_slide_desc">Up to 30 days</string>
    <string name="fourth_slide_desc">and enjoy your time to do what you love </string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Commencer !</string>
    <string name="Startup_screaan_tag_line">We help you to grow your business using online services</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="how_we_work_button">How We Work ?</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="create_account">Create\nAccount</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="forget_password_details">Provide your account\'s email for which you want to reset your password !</string>
    <string name="password_update_success_msg">Your password was updated and successfully send to your email</string>
    <string-array name="quotes">
        <item>“Either you run the day or the day runs you.”Jim Rohn</item>
        <item>Hard work pays off.</item>
        <item>Stay positive, Work hard, make it happen</item>
        <item>Always make a total effort, even when the odds are against you.</item>
        <item>Good things come to those who work their asses off and never give up.</item>
        <item>Work harder than you think you did yesterday.</item>
        <item>Don\’t be afraid to fail. Be afraid not to try.</item>
        <item>Nothing will work unless you do.</item>
        <item>A dream doesn’t become reality through magic, it takes sweat, determination and hard work.</item>
        <item>“Just one small positive thought in the morning can change your whole day.”
Dalai Lama</item>
        <item>“Do the hard jobs first. The easy jobs will take care of themselves.”
Dale Carnegie</item>
        <item>“Happiness is not in the more possession of money; it lies in the joy of achievement, in the thrill of creative effort.”
Franklin D. Roosevelt</item>
        <item>“The future depends on what you do today.”
Mahatma Gandhi</item>
        <item>“The man who moves a mountain begins by carrying away small stones.”
Confucius</item>
        <item>“Start by doing what’s necessary, then what’s possible; and suddenly you are doing the impossible.”
Saint Francis</item>
        <item>“Don\'t wait. The time will never be just right.”
Napoleon Hill</item>
        <item>“Success seems to be connected with action. Successful people keep moving. They make mistakes, but they don’t quit.”
Conrad Hilton</item>
        <item>“You don’t have to see the whole staircase, just take the first step.”
Martin Luther King, Jr.</item>
    </string-array>
    <string-array name="wilaya">
        <item>Wilaya</item>
        <item>01 - Adrar</item>
        <item>02 - Chlef</item>
        <item>03 - Laghouat</item>
        <item>04 - Oum El Bouaghi</item>
        <item>05 - Batna</item>
        <item>06 - Béjaïa</item>
        <item>07 - Biskra</item>
        <item>08 - Béchar</item>
        <item>09 - Blida</item>
        <item>10 - Bouira</item>
        <item>11 - Tamanrasset</item>
        <item>12 - Tébessa</item>
        <item>13 - Tlemcen</item>
        <item>14 - Tiaret</item>
        <item>15 - Tizi Ouzou</item>
        <item>16 - Alger</item>
        <item>17 - Djelfa</item>
        <item>18 - Jijel</item>
        <item>19 - Sétif</item>
        <item>20 - Saïda</item>
        <item>21 - Skikda</item>
        <item>22 - Sidi Bel Abbès</item>
        <item>23 - Annaba</item>
        <item>24 - Guelma</item>
        <item>25 - Constantine</item>
        <item>26 - Médéa</item>
        <item>27 - Mostaganem</item>
        <item>28 - M\'Sila</item>
        <item>29 - Mascara</item>
        <item>30 - Ouargla</item>
        <item>31 - Oran</item>
        <item>32 - El Bayadh</item>
        <item>33 - Illizi</item>
        <item>34 - Bordj Bou Arreridj</item>
        <item>35 - Boumerdès</item>
        <item>36 - El Tarf</item>
        <item>37 - Tindouf</item>
        <item>38 - Tissemsilt</item>
        <item>39 - El Oued</item>
        <item>40 - Khenchela</item>
        <item>41 - Souk Ahras</item>
        <item>42 - Tipaza</item>
        <item>43 - Mila</item>
        <item>44 - Aïn Defla</item>
        <item>45 - Naâma</item>
        <item>46 - Aïn Témouchent</item>
        <item>47 - Ghardaïa</item>
        <item>48 - Relizane</item>

    </string-array>
    <string-array name="select_commune_empty">
        <item>Commune</item>
    </string-array>
    <string-array name="communes_1">
        <item>Commune</item>
        <item>Adrar</item>
        <item>Tamest</item>
        <item>Charouine</item>
        <item>Reggane</item>
        <item>In Zghmir</item>
        <item>Tit</item>
        <item>Ksar Kaddour</item>
        <item>Tsabit</item>
        <item>Timimoun</item>
        <item>Ouled Saïd</item>
        <item>Zaouiet Kounta</item>
        <item>Aoulef</item>
        <item>Tamekten</item>
        <item>Tamantit</item>
        <item>Fenoughil</item>
        <item>Tinerkouk</item>
        <item>Deldoul</item>
        <item>Sali</item>
        <item>Akabli</item>
        <item>Metarfa</item>
        <item>Ouled Ahmed Tammi</item>
        <item>Bouda</item>
        <item>Aougrout</item>
        <item>Talmine</item>
        <item>Bordj Badji Mokhtar</item>
        <item>Sebaa</item>
        <item>Ouled Aïssa</item>
        <item>Timiaouine</item>
    </string-array>
    <string-array name="communes_2">
        <item>Commune</item>
        <item>Chlef</item>
        <item>Ténès</item>
        <item>Bénairia</item>
        <item>El Karimia</item>
        <item>Tadjena</item>
        <item>Taougrite</item>
        <item>Beni Haoua</item>
        <item>Sobha</item>
        <item>Harchoun</item>
        <item>Ouled Fares</item>
        <item>Sidi Akkacha</item>
        <item>Boukadir</item>
        <item>Beni Rached</item>
        <item>Talassa</item>
        <item>Harenfa</item>
        <item>Oued Goussine</item>
        <item>Dahra</item>
        <item>Ouled Abbes</item>
        <item>Sendjas</item>
        <item>Zeboudja</item>
        <item>Oued Sly</item>
        <item>Abou El Hassan</item>
        <item>El Marsa</item>
        <item>Chettia</item>
        <item>Sidi Abderrahmane</item>
        <item>Moussadek</item>
        <item>El Hadjadj</item>
        <item>Labiod Medjadja</item>
        <item>Oued Fodda</item>
        <item>Ouled Ben Abdelkader</item>
        <item>Bouzeghaia</item>
        <item>Aïn Merane</item>
        <item>Oum Drou</item>
        <item>Breira</item>
        <item>Beni Bouateb</item>
    </string-array>
    <string-array name="communes_3">
        <item>Commune</item>
        <item>Laghouat</item>
        <item>Ksar El Hirane</item>
        <item>Bennasser Benchohra</item>
        <item>Sidi Makhlouf</item>
        <item>Hassi Delaa</item>
        <item>Hassi R\'Mel</item>
        <item>Aïn Madhi</item>
        <item>Tadjemout</item>
        <item>Kheneg</item>
        <item>Gueltat Sidi Saad</item>
        <item>Aïn Sidi Ali</item>
        <item>Beidha</item>
        <item>Brida</item>
        <item>El Ghicha</item>
        <item>Hadj Mechri</item>
        <item>Sebgag</item>
        <item>Taouiala</item>
        <item>Tadjrouna</item>
        <item>Aflou</item>
        <item>El Assafia</item>
        <item>Oued Morra</item>
        <item>Oued M\'Zi</item>
        <item>El Houaita</item>
        <item>Sidi Bouzid</item>
    </string-array>
    <string-array name="communes_4">
        <item>Commune</item>
        <item>Oum el Bouaghi</item>
        <item>Aïn Beïda</item>
        <item>Aïn M\'lila</item>
        <item>Behir Chergui</item>
        <item>El Amiria</item>
        <item>Sigus</item>
        <item>El Belala</item>
        <item>Aïn Babouche</item>
        <item>Berriche</item>
        <item>Ouled Hamla</item>
        <item>Dhalaa</item>
        <item>Aïn Kercha</item>
        <item>Hanchir Toumghani</item>
        <item>El Djazia</item>
        <item>Aïn Diss</item>
        <item>Fkirina</item>
        <item>Souk Naamane</item>
        <item>Zorg</item>
        <item>El Fedjoudj Boughrara Saoudi</item>
        <item>Ouled Zouaï</item>
        <item>Bir Chouhada</item>
        <item>Ksar Sbahi</item>
        <item>Oued Nini</item>
        <item>Meskiana</item>
        <item>Aïn Fakroun</item>
        <item>Rahia</item>
        <item>Aïn Zitoun</item>
        <item>Ouled Gacem</item>
        <item>El Harmilia</item>
    </string-array>
    <string name="ImageView">ImageView</string>
</resources>